<resources>
    <string name="app_name">ActiveAndroid</string>
    <string name="action_settings">Settings</string>
    <string name="not_assigned">Not assigned</string>
    <string name="id_string">ID</string>
    <string name="product_string">Name</string>
    <string name="age_string">Age</string>
    <string name="add_button">ADD</string>
    <string name="find_button">FIND</string>
    <string name="delete_button">DELETE</string>
    <string name="email_text1">Email 1</string>
    <string name="email_text2">Email 2</string>
    <string name="phone_text1">Phone 1</string>
    <string name="phone_text2">Phone 2</string>
</resources>